# djangoN1EDCKEditor

./: .gitignore  README.rst  setup.cfg
n1edckeditor/: widgets.py
